# educated-guess

./: pyproject.toml  wordle.ipynb
